Add Basic Menu Support to LED Matrix Display

--- a/LED Matrix Display/platformio.ini
+++ b/LED Matrix Display/platformio.ini
@@ -13,11 +13,11 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 monitor_speed = 115200
+upload_port = COM6
 
 lib_deps =
-  ArduinoJson@6.11.3
+  ArduinoJson@6.11.4
   MD_MAX72XX@3.1.0
-  MD_MAXPanel@1.2.3
   MD_Parola@3.1.1
 
 lib_extra_dirs =
