--- a/Sensor Sphere/platformio.ini
+++ b/Sensor Sphere/platformio.ini
@@ -15,8 +15,12 @@ framework = arduino
 monitor_speed = 115200
 
 lib_deps =
-  ArduinoJson@6.11.5
+  IRremoteESP8266@2.6.4
+  WifiManager@0.14
   DHT sensor library@1.3.7
   Adafruit Unified Sensor@1.0.3
-  WifiManager@0.14
+  ArduinoJson@6.11.5
   Adafruit NeoPixel@1.2.4
+
+lib_extra_dirs =
+  ../Common Libraries/lib
