Dirty hacks to get the stuff running before expert convention

--- a/PresenceBoard/platformio.ini
+++ b/PresenceBoard/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 monitor_speed = 115200
+upload_port=COM5
 
 lib_deps =
   WifiManager@0.14
